<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alunos.adivinhasalvaplacar.Recorde">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="57dp"
        android:layout_height="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/lblPosicao1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtRecorde1"
        android:layout_width="58dp"
        android:layout_height="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtPosicao2"
        android:layout_width="57dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/lblPosicao2"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/txtRecorde2"
        android:layout_width="58dp"
        android:layout_height="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toEndOf="@+id/txtPosicao2"
        app:layout_constraintTop_toTopOf="@+id/txtRecorde1" />

    <TextView
        android:id="@+id/txtPosicao3"
        android:layout_width="57dp"
        android:layout_height="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/lblPosicao3"
        app:layout_constraintEnd_toEndOf="@+id/txtPosicao2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPosicao2" />

    <TextView
        android:id="@+id/txtRecorde3"
        android:layout_width="58dp"
        android:layout_height="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtPosicao3"
        app:layout_constraintTop_toBottomOf="@+id/txtRecorde2" />

    <TextView
        android:id="@+id/txtPosicao4"
        android:layout_width="57dp"
        android:layout_height="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/lblPosicao4"
        app:layout_constraintEnd_toEndOf="@+id/txtPosicao3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPosicao3" />

    <TextView
        android:id="@+id/txtRecorde4"
        android:layout_width="58dp"
        android:layout_height="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtPosicao4"
        app:layout_constraintTop_toBottomOf="@+id/txtRecorde3" />

    <TextView
        android:id="@+id/txtPosicao5"
        android:layout_width="57dp"
        android:layout_height="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/lblPosicao5"
        app:layout_constraintEnd_toEndOf="@+id/txtPosicao4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPosicao4" />

    <TextView
        android:id="@+id/txtRecorde5"
        android:layout_width="58dp"
        android:layout_height="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toEndOf="@+id/txtPosicao5"
        app:layout_constraintTop_toBottomOf="@+id/txtRecorde4" />

    <TextView
        android:id="@+id/txtPosicao6"
        android:layout_width="58dp"
        android:layout_height="18dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/lblPosicao6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtPosicao5"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPosicao5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtRecorde6"
        android:layout_width="58dp"
        android:layout_height="17dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toEndOf="@+id/txtPosicao6"
        app:layout_constraintTop_toBottomOf="@+id/txtRecorde5"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
